2004-09-04  Not Zed  <NotZed@Ximian.com>

	* providers/local/camel-mbox-summary.c (message_info_new): fix
	cast issue.

	* providers/pop3/camel-pop3-engine.c (get_capabilities): remove
	some unused variables.

	* camel-object.h: remove camel-i18n.h, fixed all c files where
	appropriate.

2004-08-25  Not Zed  <NotZed@Ximian.com>

	* camel-list-utils.[ch]: Copied e_dlist* stuff to here, part of
	removing e-util dependency on camel.

2004-08-05  Not Zed  <NotZed@Ximian.com>

	* providers/local/camel-local-provider.c: same.

	* providers/imap/camel-imap-provider.c: put the extra stuff into a
	'general' section.

	* providers/imapp/camel-imapp-provider.c: same.

	* providers/pop3/camel-pop3-provider.c: make sure each section
	start has a name.

2004-08-03  Not Zed  <NotZed@Ximian.com>

	* camel-url.c (camel_url_set_param): when clearing a param, use
	remove_data instead of set_data_full.  craptatious glib at it
	again.

	* providers/nntp/camel-nntp-provider.c: turn on ssl option.

2004-07-07  Not Zed  <NotZed@Ximian.com>

	* camel-folder.c: removed filter-rule.h  ugh.

2004-07-02  Christian Neumair  <chris@gnome-de.org>

	* camel-smime-context.c: s/Can't/Cannot/.

2004-06-30  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-search.c (imap4_body_contains): Set
	the size of the ptrarray to prevent potentially realloc'ing
	several times.

2004-06-29  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-command.c
	(camel_imap4_command_newv): Aded a new %formatter 'V' which takes
	a string vector (needed for SEARCH).

	* providers/imap4/camel-imap4-search.[c,h]: New source files
	implementing search functionality.

	* providers/imap4/camel-imap4-folder.c (imap4_sync_flag): Use the
	new public version of imap4_get_uid_set().
	(imap4_transfer_messages_to): Same.
	(camel_imap4_folder_new): Create a search context.
	(camel_imap4_folder_finalize): Unref the search context.
	(camel_imap4_folder_class_init): Override the search methods.